--- a/intro-section-with-dropdown-navigation-main/css/main.css
+++ b/intro-section-with-dropdown-navigation-main/css/main.css
@@ -39,8 +39,7 @@ body {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
@@ -59,11 +58,226 @@ picture {
   *,
 *::before,
 *::after {
-    -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-    -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+/* Remove styling from links */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.flex {
+  display: flex;
+}
+
+body {
+  font-family: "Epilogue", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+/* CSS RESET */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+svg,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+*::before,
+*::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+/* Remove styling from links */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.flex {
+  display: flex;
+}
+
+.header {
+  padding-inline: 2.5rem;
+  padding-block: 1rem;
+}
+.header__logo {
+  margin-right: 4rem;
+}
+.header__nav-link {
+  font-size: 15px;
+  color: hsl(0deg, 0%, 41%);
+}
+.header__nav-link:hover, .header__nav-link:focus {
+  color: #141414;
+  cursor: pointer;
+}
+.header__nav-link:hover .dropdown__arrow, .header__nav-link:focus .dropdown__arrow {
+  background-image: url(../images/icon-arrow-up.svg);
+  filter: brightness(0) saturate(100%);
+}
+.header__nav-link--outlined {
+  padding: 0.7rem 1.2rem;
+  border: 2px solid hsl(0deg, 0%, 41%);
+  border-radius: 1rem;
+}
+
+.dropdown__arrow {
+  width: 10px;
+  height: 6px;
+  background-image: url(../images/icon-arrow-down.svg);
+  transform: translateY(-1px);
+}
+
+.main {
+  justify-content: space-between;
+}
+.main__left h1 {
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 1;
+}
+.main__left p {
+  color: hsl(0deg, 0%, 41%);
+  width: 70%;
+}
+.main__left__title {
+  margin-top: 5rem;
+}
+
+.cta {
+  background: #141414;
+  color: hsl(0deg, 0%, 98%);
+  border-radius: 1rem;
+  border: 2px solid #141414;
+}
+.cta:hover, .cta:focus {
+  background-color: hsl(0deg, 0%, 98%);
+  color: #141414;
+  cursor: pointer;
+}
+
+.dropdown {
+  background-color: hsl(0deg, 0%, 98%);
+  border-radius: 1rem;
+  font-size: 13px;
+}
+
+.header {
+  justify-content: space-between;
+  align-items: center;
+}
+.header__nav {
+  gap: 2.3rem;
+  align-items: center;
+}
+
+.dropdown__arrow {
+  display: inline-block;
+}
+
+.main {
+  margin: 4rem auto;
+  width: min(75rem, 80%);
+}
+.main__left {
+  max-width: 40rem;
+  flex-direction: column;
+  gap: 3rem;
+}
+.main__right {
+  max-width: 30rem;
+}
+
+.cta {
+  width: 30%;
+  padding: 1rem;
+}
+
+.clients-logos {
+  width: 80%;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+.clients-logos img {
+  object-fit: contain;
+}
+
+.header__dropdown {
+  position: relative;
+}
+
+.dropdown {
+  position: absolute;
+  padding: 2rem;
+  top: 2rem;
+  z-index: 2;
+}
+.dropdown__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.feature {
+  display: flex;
+  justify-content: space-between;
+}
+
+.feature__dropdown {
+  width: 10rem;
+  left: -5rem;
 }/*# sourceMappingURL=main.css.map */
