--- a/intro-section-with-dropdown-navigation-main/css/main.css
+++ b/intro-section-with-dropdown-navigation-main/css/main.css
@@ -1,4 +1,5 @@
 body {
+  background-color: hsl(0deg, 0%, 98%);
   font-family: "Epilogue", sans-serif;
   font-weight: 500;
   font-size: 18px;
@@ -75,6 +76,7 @@ a {
 }
 
 body {
+  background-color: hsl(0deg, 0%, 98%);
   font-family: "Epilogue", sans-serif;
   font-weight: 500;
   font-size: 18px;
@@ -162,12 +164,12 @@ a {
   color: hsl(0deg, 0%, 41%);
 }
 .header__nav-link:hover, .header__nav-link:focus {
-  color: #141414;
   cursor: pointer;
 }
-.header__nav-link:hover .dropdown__arrow, .header__nav-link:focus .dropdown__arrow {
-  background-image: url(../images/icon-arrow-up.svg);
-  filter: brightness(0) saturate(100%);
+.header__nav-link:hover .nav-link,
+.header__nav-link:hover .dropdown__link, .header__nav-link:focus .nav-link,
+.header__nav-link:focus .dropdown__link {
+  color: hsl(0deg, 0%, 8%);
 }
 .header__nav-link--outlined {
   padding: 0.7rem 1.2rem;
@@ -180,6 +182,10 @@ a {
   height: 6px;
   background-image: url(../images/icon-arrow-down.svg);
   transform: translateY(-1px);
+}
+
+.hamburger {
+  display: none;
 }
 
 .main {
@@ -199,23 +205,66 @@ a {
 }
 
 .cta {
-  background: #141414;
+  background: hsl(0deg, 0%, 8%);
   color: hsl(0deg, 0%, 98%);
   border-radius: 1rem;
-  border: 2px solid #141414;
+  border: 2px solid hsl(0deg, 0%, 8%);
 }
 .cta:hover, .cta:focus {
   background-color: hsl(0deg, 0%, 98%);
-  color: #141414;
+  color: hsl(0deg, 0%, 8%);
   cursor: pointer;
 }
 
 .dropdown {
-  background-color: hsl(0deg, 0%, 98%);
-  border-radius: 1rem;
+  display: none;
+  cursor: default;
+  background-color: hsl(0deg, 0%, 100%);
+  border-radius: 0.8rem;
   font-size: 13px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
 }
 
+.header__dropdown:hover .dropdown__gap, .header__dropdown:hover .dropdown, .header__dropdown:focus .dropdown__gap, .header__dropdown:focus .dropdown,
+.dropdown:hover .dropdown__gap,
+.dropdown:hover .dropdown,
+.dropdown:focus .dropdown__gap,
+.dropdown:focus .dropdown,
+.dropdown__gap:hover .dropdown__gap,
+.dropdown__gap:hover .dropdown,
+.dropdown__gap:focus .dropdown__gap,
+.dropdown__gap:focus .dropdown {
+  display: block;
+}
+.header__dropdown:hover .dropdown__arrow, .header__dropdown:focus .dropdown__arrow,
+.dropdown:hover .dropdown__arrow,
+.dropdown:focus .dropdown__arrow,
+.dropdown__gap:hover .dropdown__arrow,
+.dropdown__gap:focus .dropdown__arrow {
+  background-image: url(../images/icon-arrow-up.svg);
+  filter: brightness(0) saturate(100%);
+}
+
+.dropdown__list__link:hover, .dropdown__list__link:focus, .feature:hover, .feature:focus {
+  color: hsl(0deg, 0%, 8%);
+  cursor: pointer;
+}
+
+.dropdown__gap {
+  display: none;
+  position: absolute;
+  height: 2rem;
+  width: 5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .header__nav {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+  }
+}
 .header {
   justify-content: space-between;
   align-items: center;
@@ -262,7 +311,7 @@ a {
 
 .dropdown {
   position: absolute;
-  padding: 2rem;
+  padding: 1rem 2rem 1.2rem;
   top: 2rem;
   z-index: 2;
 }
@@ -274,10 +323,46 @@ a {
 
 .feature {
   display: flex;
-  justify-content: space-between;
+}
+.feature img {
+  object-fit: contain;
+  margin-right: 0.7rem;
 }
 
 .feature__dropdown {
   width: 10rem;
   left: -5rem;
+}
+
+.company__dropdown {
+  width: 7.8rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .header {
+    padding-block: 1.8rem;
+  }
+  .main {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+  }
+  .main__left {
+    align-items: center;
+    gap: 2rem;
+  }
+  .main__left__title h1 {
+    display: inline;
+    font-size: 4rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header {
+    padding-block: 1rem;
+    padding-inline: 1rem;
+  }
+  .clients-logos img {
+    object-fit: fill;
+  }
 }/*# sourceMappingURL=main.css.map */
