--- a/intro-section-with-dropdown-navigation-main/scss/_layout.scss
+++ b/intro-section-with-dropdown-navigation-main/scss/_layout.scss
@@ -53,7 +53,7 @@
 
 .dropdown {
   position: absolute;
-  padding: 2rem;
+  padding: 1rem 2rem 1.2rem;
   top: 2rem;
   z-index: 2;
 
@@ -66,7 +66,11 @@
 
 .feature {
   display: flex;
-  justify-content: space-between;
+
+  img {
+    object-fit: contain;
+    margin-right: 0.7rem;
+  }
 }
 
 .feature__dropdown {
@@ -74,3 +78,50 @@
   left: -5rem;
 }
 
+.company__dropdown {
+  width: 7.8rem;
+}
+
+
+
+@media screen and (max-width: $breakpoint-mobile) {
+  .header {
+    padding-block: 1.8rem;
+  }
+  
+  .main {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+
+    &__left {
+      align-items: center;
+      gap: 2rem;
+      &__title {
+        h1 {
+          display: inline;
+          font-size: 4rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-header) {
+  .header {
+    padding-block: 1rem;
+    padding-inline: 1rem;
+  }
+
+  &__left {
+    align-items: center;
+    gap: 2rem;
+    &__title {
+      h1 {
+        display: inline;
+        font-size: 2rem;
+      }
+    }
+  }
+}
